# jwpopup

./: CMakeLists.txt
core/: drw.c  jwpopup.c  stb_image_resize2.h  x11.c
daemon/: main.c
include/jw/popup/: drw.h  popup.h  window_backend.h  x11.h
